--- a/index.css
+++ b/index.css
@@ -1,28 +1,34 @@
 body {
- background-color:#F0F0F0;
- padding: 2em;
- font-family: ‘Raleway’,’Source Sans Pro’, ‘Arial’;
-}
-.container {
- width: 50%;
- margin: 0 auto;
+   background-color:rgb(52, 61, 70);
+   padding: 2em;
+   font-family: ‘Raleway’,’Source Sans Pro’, ‘Arial’;
 }
 label {
- display:block;
- margin-bottom:10px;
+   display:block;
+   margin-bottom:10px;
 }
 input {
- padding:10px;
- width: 50%;
- margin-bottom: 1em;
+   padding:10px;
+   width: 50%;
+   margin-bottom: 1em;
 }
 button {
- margin: 2em 0;
- padding: 1em 4em;
- display:block;
+	margin: 2em 0;
+	padding: 1em 4em;
+	display:block;
+	background-color: rgb(248,248,255);
 }
+h1 {
+	color: rgb(248,248,255);
+}
+
+.container {
+   width: 50%;
+   margin: 0 auto;
+}
+
 #instructor {
- padding:1em;
- background-color:#fff;
- margin: 1em 0;
+   padding:1em;
+   background-color:#fff;
+   margin: 1em 0;
 }
