--- a/index.css
+++ b/index.css
@@ -38,3 +38,36 @@ h1 {
    color: rgb(248,248,255);
    margin: 1em 0;
 }
+
+.metashit {
+  padding: 16px; 
+  background-color: white; 
+  border-radius: 1rem; 
+  border: 1px solid rgb(225, 225, 225); 
+  font-weight: 500; 
+  display: flex; 
+  justify-content: space-between;
+  min-width: 250px;
+}
+.metashit-h3 {
+  margin: 0px 12px; 
+  color: rgb(1, 1, 1); 
+  font-weight: 500; 
+  font-size: 1rem;
+}
+.metashit-label {
+  width: 100%;
+  display: inherit;
+  font-size: 1rem;
+  align-items: inherit;
+  text-transform: none;
+  justify-content: inherit;
+}
+.metashit-img {
+  position: absolute; 
+  right: 82%;
+  bottom: 40.7%; 
+  width: 30px; 
+  height: 30px;
+}
+
