--- a/index.css
+++ b/index.css
@@ -23,6 +23,11 @@ h1 {
 	color: rgb(248,248,255);
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .text {
     color: rgb(248,248,255);
     font-family: 'Open Sans', sans-serif;
