--- a/index.css
+++ b/index.css
@@ -38,6 +38,14 @@ a {
    margin: 0 auto;
 }
 
+.xDaiDonationBox {
+   height: 38px;
+}
+
+.customDonationBox {
+   max-width: 100px;
+}
+
 #instructor {
    padding:1em;
    color: rgb(248,248,255);
